# imesa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/imesa/: biased_prior-inl.h  biased_prior.h  imesa.h  incremental_sam_agent.h
src/: biased_prior.cpp  imesa.cpp
